# smart-cottage-esp8266

./: CMakeLists.txt  Makefile  cottage_master_config.h  guest_house_config.h  sdkconfig.defaults
main/: app_main.c  comm_utils.c  comm_utils.h  devices_utils.c  devices_utils.h  general_utils.c  general_utils.h  wifi_utils.c  wifi_utils.h
